--- a/Tetardink/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Tetardink/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -243,16 +243,18 @@ LastLevel=/Game/trucs_a_nous/map/Untitled
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/mecha_char+cam.mecha_char+cam
 OpenAssetsAtExit=/Game/Blueprints/zombie.zombie
+OpenAssetsAtExit=/Game/Blueprints/zombie_spawner.zombie_spawner
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/zombie
-MRUItem1=/Game/trucs_a_nous/3d/zombie/Zombie_Reaction_Hit__1_
-MRUItem2=/Game/trucs_a_nous/3d/zombie/Zombie_Reaction_Hit
-MRUItem3=/Game/trucs_a_nous/Material
-MRUItem4=/Game/Blueprints/zombie_anim
-MRUItem5=/Game/Blueprints/mecha_char+cam
-MRUItem6=/Game/Blueprints/zombie_spawner
+MRUItem0=/Game/Blueprints/zombie_spawner
+MRUItem1=/Game/Blueprints/zombie
+MRUItem2=/Game/Blueprints/mecha_char+cam
+MRUItem3=/Game/trucs_a_nous/3d/zombie/Zombie_Reaction_Hit__1_
+MRUItem4=/Game/trucs_a_nous/3d/zombie/Zombie_Reaction_Hit
+MRUItem5=/Game/trucs_a_nous/Material
+MRUItem6=/Game/Blueprints/zombie_anim
 MRUItem7=/Game/trucs_a_nous/3d/zombie/Zombie_Attack
 MRUItem8=/Game/Blueprints/ennemy2
 MRUItem9=/Game/trucs_a_nous/3d/new/legs/mech_main_material
@@ -2750,8 +2752,8 @@ ProgressBar="\"Object.Render Transform.RenderTransform\" "
 interface_C="\"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" "
 mecha_char+cam_C=
-Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
+Character=
+Pawn=
 ennemy_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2808,7 +2810,7 @@ FourPanes2x2.Viewport 2.bIsMaximized=True
 FourPanes2x2.Viewport 2.MaximizedViewport=FourPanes2x2.Viewport 2.Viewport1
 
 [Directories2]
-UNR=../../../../tetard-test/Tetardink/Content/trucs_a_nous/map
+UNR=../../../../tetard/Tetardink/Content/trucs_a_nous/map
 BRUSH=C:/Users/lilia/Documents/Unreal Projects/Tetardink/Content/
 FBX=C:/Users/lilia/Documents/Unreal Projects/Tetardink/Content/
 FBXAnim=C:/Users/lilia/Documents/Unreal Projects/Tetardink/Content/
